work 0.0.4-verificar balancete
