# src/route/routes.ts
@@ -52,19 +52,6 @@ const models: TsoaRoute.Models = {
         "type": {"dataType":"nestedObjectLiteral","nestedProperties":{"nome_conta":{"dataType":"string"},"tipo_conta":{"ref":"TipoConta"},"codigo_conta":{"dataType":"string"},"subtipo_conta":{"dataType":"string"},"subtipo_secundario":{"dataType":"string"}},"validators":{}},
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-    "Balancete": {
-        "dataType": "refObject",
-        "properties": {
-            "id_balancete": {"dataType":"double","required":true},
-            "mes": {"dataType":"double","required":true},
-            "ano": {"dataType":"double","required":true},
-            "id_conta": {"dataType":"double","required":true},
-            "saldo_inicial": {"dataType":"double","required":true},
-            "saldo_final": {"dataType":"double","required":true},
-        },
-        "additionalProperties": false,
-    },
-    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 };
 const templateService = new ExpressTemplateService(models, {"noImplicitAdditionalProperties":"throw-on-extras","bodyCoercion":true});
 
@@ -395,7 +382,7 @@ export function RegisterRoutes(app: Router) {
         const argsBalancetesController_getBalancetes: Record<string, TsoaRoute.ParameterSchema> = {
                 mes: {"in":"query","name":"mes","required":true,"dataType":"double"},
                 ano: {"in":"query","name":"ano","required":true,"dataType":"double"},
-                notFoundResponse: {"in":"res","name":"404","required":true,"dataType":"nestedObjectLiteral","nestedProperties":{"message":{"dataType":"string","required":true}}},
+                serverErrorResponse: {"in":"res","name":"500","required":true,"dataType":"nestedObjectLiteral","nestedProperties":{"message":{"dataType":"string","required":true}}},
         };
         app.get('/balancetes',
             ...(fetchMiddlewares<RequestHandler>(BalancetesController)),
@@ -413,37 +400,6 @@ export function RegisterRoutes(app: Router) {
 
               await templateService.apiHandler({
                 methodName: 'getBalancetes',
-                controller,
-                response,
-                next,
-                validatedArgs,
-                successStatus: undefined,
-              });
-            } catch (err) {
-                return next(err);
-            }
-        });
-        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-        const argsBalancetesController_postGerarBalancetes: Record<string, TsoaRoute.ParameterSchema> = {
-                body: {"in":"body","name":"body","required":true,"dataType":"nestedObjectLiteral","nestedProperties":{"ano":{"dataType":"double","required":true},"mes":{"dataType":"double","required":true}}},
-                serverErrorResponse: {"in":"res","name":"500","required":true,"dataType":"nestedObjectLiteral","nestedProperties":{"message":{"dataType":"string","required":true}}},
-        };
-        app.post('/balancetes/gerar',
-            ...(fetchMiddlewares<RequestHandler>(BalancetesController)),
-            ...(fetchMiddlewares<RequestHandler>(BalancetesController.prototype.postGerarBalancetes)),
-
-            async function BalancetesController_postGerarBalancetes(request: ExRequest, response: ExResponse, next: any) {
-
-            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-
-            let validatedArgs: any[] = [];
-            try {
-                validatedArgs = templateService.getValidatedArgs({ args: argsBalancetesController_postGerarBalancetes, request, response });
-
-                const controller = new BalancetesController();
-
-              await templateService.apiHandler({
-                methodName: 'postGerarBalancetes',
                 controller,
                 response,
                 next,
